# textgrad-playground

./: pyproject.toml  test.ipynb
