[tool.poetry]
name = "textgrad-playground"
version = "0.1.0"
description = ""
authors = ["viky <vikyw89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
textgrad = "^0.1.5"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
